--- a/src/scss/angled-nav.scss
+++ b/src/scss/angled-nav.scss
@@ -1,6 +1,20 @@
 @use "./variables" as *;
 
+#fade-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: black;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s ease;
+}
+
 .angled-nav {
+    position: relative;
+    z-index: 200;
     overflow: hidden;
     min-width: max(30.5rem, 28vw);
     height: 100vh;
