--- a/src/app/angled-nav/angled-nav.component.html
+++ b/src/app/angled-nav/angled-nav.component.html
@@ -16,13 +16,6 @@
                             (change)="setTheme('light-mode')">
                         Light
                     </label>
-
-                    <!-- <label class="flex-group flex-start flex-align-center flex-nowrap">
-                        <input type="radio" name="theme" value="colour-mode"
-                            [checked]="theme === 'colour-mode'"
-                            (change)="setTheme('colour-mode')">
-                        Colour
-                    </label> -->
                 </div>
             </div>
             
@@ -106,7 +99,7 @@
                 <li><label>United Kingdom</label></li>
                 <li class="margin-top-2"><label>Offices</label></li>
                 <li><label>Associated offices & cooperations</label></li>
-                <li><label>Currently not serviced</label></li>
+                <!-- <li><label>Currently not serviced</label></li> -->
             </ul>
         </section>
     </nav>
