--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -132,7 +132,7 @@ body {
 
                     .region-header {
                         .marker-large.marker-hollow {
-                            background-color: $white!important;
+                            background-color: $kennedys-black-10!important;
                             color: $kennedys-black-100!important;
                         }
                     }
